About digiserve content . Disabled maximizing the  form

--- a/DigiServe/ADS_Frm.resx
+++ b/DigiServe/ADS_Frm.resx
@@ -63,6 +63,9 @@
   <metadata name="fileSystemWatcher1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>214, 17</value>
   </metadata>
+  <data name="label2.Text" xml:space="preserve">
+    <value>DIGISERVE is known as appointment reservation app. The Function of the app is to allow the users to reserve the date for when they are going to pay their tuition, request for their paperworks (i.e form 137, TOR) in order to avoid the long lines and waiting for their turn. This app is proposed for any school, either private or public.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
